refreshed how this app uses docker to run on singularity enabled clusters

--- a/config.json.sample
+++ b/config.json.sample
@@ -5,6 +5,7 @@
     "bvals": "/N/u/hayashis/Karst/testdata/108323/dwi/dwi.bvals",
     "eddyCorrect": "1",
     "rotateBvecsWithRx": false,
-    "rotateBvecsWithCanXform": false
+    "rotateBvecsWithCanXform": false,
+    "resolution": "default"
 }
 
