--- a/config.json.sample
+++ b/config.json.sample
@@ -3,9 +3,10 @@
     "dwi": "/N/u/hayashis/Karst/testdata/108323/dwi/dwi.nii.gz",
     "bvecs": "/N/u/hayashis/Karst/testdata/108323/dwi/dwi.bvecs",
     "bvals": "/N/u/hayashis/Karst/testdata/108323/dwi/dwi.bvals",
-    "eddyCorrect": "1",
-    "rotateBvecsWithRx": false,
-    "rotateBvecsWithCanXform": false,
-    "resolution": "default"
+    "phaseEncodeDir": "2",
+    "resolution": "default",
+    "rotateBvecsWithCanXform": true,
+    "rotateBvecsWithRx": true,
+    "eddyCorrect": "1"
 }
 
