Added noDwiAlignment configuration option

--- a/config.json.sample
+++ b/config.json.sample
@@ -7,6 +7,7 @@
     "phaseEncodeDir": "2",
     "rotateBvecsWithRx": false,
     "rotateBvecsWithCanXform": false,
+    "noDwiAlignment": false,
     "resolution": "default"
 }
 
